--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ environment:
 dependencies:
   device_info: ^0.4.0+1
   http: ^0.12.0+2
+  shared_preferences: ^0.5.1+2
+  sqflite: ^1.1.0
+  path_provider: ^0.5.0+1
   flutter:
     sdk: flutter
 
