--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shared_preferences: ^0.5.1+2
   sqflite: ^1.1.0
   path_provider: ^0.5.0+1
+  intl: "^0.15.6"
   flutter:
     sdk: flutter
 
